--- a/index.html
+++ b/index.html
@@ -12,31 +12,37 @@
       <nav>
         <a href="https://sandrosbooks.com/">
           <div class="logo-wrapper btn">
-            <img class="logo" src="./assets/share.svg" alt="logo" />
+            <img class="logo" src="./assets/SandrosBooks_logo.svg" alt="logo" />
           </div>
         </a>
         <ul class="nav-links">
           <li>
             <button class="btn burger-menu-btn">
-              <img src="./assets/burger.svg" alt="burger menu" />
+              <img src="./assets/button_burger.svg" alt="burger menu" />
             </button>
           </li>
           <li>
             <button class="btn toggle-menu">
-              <img src="./assets/share.svg" alt="burger menu" />
+              <img src="./assets/button_links.svg" alt="burger menu" />
             </button>
             <div class="toggle-btns">
               <a href="https://www.instagram.com/sandrosbooks/"
                 ><button class="btn">
-                  <img src="./assets/instagram.svg" alt="instagram" /></button
+                  <img
+                    src="./assets/button_instagra.svg"
+                    alt="instagram"
+                  /></button
               ></a>
               <a href="https://www.facebook.com/Sandros.books"
                 ><button class="btn">
-                  <img src="./assets/facebook.svg" alt="facebook" /></button
+                  <img
+                    src="./assets/button_facebook.svg"
+                    alt="facebook"
+                  /></button
               ></a>
               <a href="https://sandrosbooks.com/"
                 ><button class="btn">
-                  <img src="./assets/share.svg" alt="website" /></button
+                  <img src="./assets/button_web.svg" alt="website" /></button
               ></a>
             </div>
           </li>
@@ -49,7 +55,7 @@
       </nav>
       <div class="menu">
         <button class="btn close">
-          <img src="./assets/closeBtn.svg" alt="close" />
+          <img src="./assets/button_close.svg" alt="close" />
         </button>
         <div class="menu-items">
           <a href="./index.html"> <p>სარჩევი</p></a>
