--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="gallery-container"></div>
+      <div id="modal-container"></div>
+    </main>
+    <script src="./js/app.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./JS/main.js"></script>
   </body>
 </html>
