--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
     </main>
     <script src="./js/app.js"></script>
     <script src="./js/modal.js"></script>
-    <script src="./JS/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
