--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
     <main>
       <div class="gallery-container"></div>
-      <div id="modal-container"></div>
+      <div id="gallery-popover" popover></div>
     </main>
     <script src="./js/app.js"></script>
     <script src="./js/modal.js"></script>
