--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
     <main>
       <div class="gallery-container"></div>
       <div id="gallery-popover" popover></div>
+      <div id="pagination"></div>
     </main>
     <script src="./js/app.js"></script>
     <script src="./js/modal.js"></script>
     <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/pagination.js"></script>
   </body>
 </html>
