--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
             </div>
           </li>
           <li>
-            <button class="btn">
-              <p>EN</p>
-            </button>
+            <button id="language-btn" class="btn">GE</button>
           </li>
         </ul>
       </nav>
@@ -75,6 +73,7 @@
     </main>
     <script src="./js/app.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/languageChange.js"></script>
     <script type="module" src="./js/main.js"></script>
     <script type="module" src="./js/pagination.js"></script>
   </body>
