--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </li>
           <li>
             <button class="btn toggle-menu">
-              <img src="./assets/button_links.svg" alt="burger menu" />
+              <img src="./assets/button_links.svg" alt="toggle menu" />
             </button>
             <div class="toggle-btns">
               <a href="https://www.instagram.com/sandrosbooks/"
@@ -47,7 +47,11 @@
             </div>
           </li>
           <li>
-            <button id="language-btn" class="btn">GE</button>
+            <button id="language-btn" class="btn toggle-menu">GE</button>
+            <div class="language-toggle-btns">
+              <button class="btn language-btn">EN</button>
+              <button class="btn language-btn">IT</button>
+            </div>
           </li>
         </ul>
       </nav>
