--- a/index.html
+++ b/index.html
@@ -5,6 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ilustrations Gallery</title>
+
+    <!-- Google Meta Tags - English -->
+    <meta
+      name="description"
+      content="Illustrations gallery from the collection of stories by Sandro Asatiani"
+    />
+    <meta
+      name="keywords"
+      content="Illustrations gallery, Sandro's books, Gallery, Chaos to cosmos, Sexiest profession, Magician, Encounter Leviathan, Office vanities, Artificial intelligence, True teacher, Glass jar, Digital heaven, Picture talk, Immortality, Cybershaman, Chatbot, Digital Paradise, Computer game"
+    />
+    <meta name="author" content="Sandro Asatiani" />
+
+    <!-- Google Meta Tags - Georgian -->
+    <meta
+      name="description"
+      content="ილუსტრაციების გალერეა სანდრო ასათიანის მოთხრობათა კრებულიდან"
+    />
+    <meta
+      name="keywords"
+      content="ილუსტრაციების გალერეა, სანდროს წიგნები, გალერეა, ქაოსიდან კოსმოსამდე, ყველაზე სექსუალური პროფესია, ჯადოქარი, შეხვედრა ლევიათანთან, ოფისების ამაოება, ხელოვნური ინტელექტი, ჭეშმარიტი მასწავლებელი, შუშის ქილა, ციფრული სამოთხე, ნახატებით საუბარი, უკვდავება, კიბერშამანი, ჩეთბოტი, ჩეტბოტი, ციფრული სამოთხე, კომპიუტერული თამაში"
+    />
+    <meta name="author" content="სანდრო ასათიანი" />
+
+    <!-- Google Meta Tags - Italian -->
+    <meta
+      name="description"
+      content="Galleria di illustrazioni dalla raccolta di racconti di Sandro Asatiani"
+    />
+    <meta
+      name="keywords"
+      content="Galleria di illustrazioni, I libri di Sandro, Galleria, Dal caos al cosmo, La professione più sexy, Mago, Encounter Leviathan, Vanità da ufficio, Intelligenza artificiale, Vero insegnante, Barattolo di vetro, Paradiso digitale, Discorso illustrato, Immortalità, Cybershaman, Chatbot, Paradiso digitale, Gioco per computer"
+    />
+    <meta name="author" content="Sandro Asatiani" />
+
+    <!-- Facebook Meta Tags - English -->
+    <meta property="og:title" content="Illustrations Gallery" />
+    <meta
+      property="og:description"
+      content="Illustrations gallery from the collection of stories by Sandro Asatiani"
+    />
+    <meta property="og:image" content="./assets/SandrosBooks_logo.svg" />
+    <meta
+      property="og:url"
+      content="https://mind1a.github.io/illustrationsGallery/"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Facebook Meta Tags - Georgian -->
+    <meta property="og:title" content="ილუსტრაციების გალერეა" />
+    <meta
+      property="og:description"
+      content="ილუსტრაციების გალერეა სანდრო ასათიანის მოთხრობათა კრებულიდან"
+    />
+    <meta property="og:image" content="./assets/SandrosBooks_logo.svg" />
+    <meta
+      property="og:url"
+      content="https://mind1a.github.io/illustrationsGallery/"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Facebook Meta Tags - Italian -->
+    <meta property="og:title" content="Galleria delle illustrazioni" />
+    <meta
+      property="og:description"
+      content="Galleria di illustrazioni dalla raccolta di racconti di Sandro Asatiani"
+    />
+    <meta property="og:image" content="./assets/SandrosBooks_logo.svg" />
+    <meta
+      property="og:url"
+      content="https://mind1a.github.io/illustrationsGallery/"
+    />
+    <meta property="og:type" content="website" />
+
     <link rel="stylesheet" href="./css/global.css" />
   </head>
   <body>
